--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,13 @@
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
+
+
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+
+}
 .mat-drawer-inner-container::-webkit-scrollbar {
     display: none;
 }
