--- a/src/app/components/project-pages/portfolio/portfolio.component.scss
+++ b/src/app/components/project-pages/portfolio/portfolio.component.scss
@@ -37,7 +37,7 @@ mat-raised-button:hover {
 }
 .card-description {
   margin-top: 5px;
-
+  white-space: pre-line;
   font-size: 12px;
   font-weight: 300;
   margin-left: 15px;
