--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -1,6 +1,7 @@
+
 <h1 mat-dialog-title>User Login Page</h1>
 <div mat-dialog-content class="mat-typography">
-      <form class="mat-typography" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+      <form name="profileForm" class="mat-typography" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="fill">
             <mat-label for="first-name">First Name: </mat-label>
             <input matInput id="first-name" type="text" formControlName="firstName" required
@@ -9,7 +10,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label for="last-name">Last Name: </mat-label>
-            <input matInput id="last-name" type="text" formControlName="lastName" placeholder="Enter your last name">
+            <input matInput id="last-name" type="text" formControlName="Lastname" placeholder="Enter your last name">
         </mat-form-field>
 
         <div formGroupName="address">
@@ -35,7 +36,7 @@
                 <input matInput id="zip" type="text" formControlName="zip" placeholder="Zip Code">
             </mat-form-field>
         </div>
-        <!--
+        
     <div formArrayName="aliases">
         <button mat-button (click)="addAlias()" type="button">+alias</button>
 
@@ -46,7 +47,7 @@
         </div>
        
     </div>
-   -->
+   
         <p>Complete the form to enable button.</p>
 
         <div mat-dialog-actions><span>
@@ -54,12 +55,12 @@
                     [disabled]="!profileForm.valid">Submit</button></span>
         </div>
     </form>
-    <!--
+    
     <hr>
     <p>Form Value: {{ profileForm.value | json }}</p>
 
     <p>Form Status: {{ profileForm.status }}</p>
--->
+
 
 
 <!--
