--- a/src/app/components/project-pages/quo-pic/quo-pic.component.scss
+++ b/src/app/components/project-pages/quo-pic/quo-pic.component.scss
@@ -1,22 +1,16 @@
-@use "@angular/material" as mat;
+@use "@angular/material"as mat;
 
 .grid-container {
   width: 100%;
 }
-.grid-tile {
-  width: 100%;
-  height: 100%;
-}
+
+
 .dashboard-card {
-  top: 15px;
-  bottom: 15px;
   padding: 0;
   width: 90%;
   height: auto;
   max-width: 100%;
-  
-  margin-left: auto;
-  margin-right: auto;
+  margin: 15px auto;
 }
 
 mat-raised-button:hover {
@@ -27,10 +21,9 @@ mat-raised-button:hover {
   font-size: 18px;
   font-weight: bold;
   line-height: 18px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+  margin: 15px;
 }
+
 .card-subtitle {
   font-size: 14px;
   font-weight: 300;
@@ -38,32 +31,27 @@ mat-raised-button:hover {
   margin-left: 15px;
 
 }
+
 .card-description {
   margin-top: 5px;
-  
+  white-space: pre-line;
   font-size: 12px;
   font-weight: 300;
-
-  margin-left: 15px;
-
+  margin: 30px auto;
   padding: 10px;
-   white-space: pre-line;
 }
 
 .card-description::first-letter {
   font-size: xx-large;
   font-weight: bold;
-  
+
 }
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-}
+
 
 .dashboard-card-content {
   width: 100%;
   height: 100%;
+
 }
 
 .button-group {
@@ -74,25 +62,28 @@ mat-raised-button:hover {
   column-gap: 2%;
   justify-content: center;
   align-items: center;
-  
+  margin: 30px auto;
 }
 
-mat-card .img_project {
-  width: 100%;
+.img_project {
+  width: 75%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
-  max-width: 500px;
+
 }
+
 .menu-item {
   margin: 15px 0;
   @include mat.elevation(2);
+
   :hover {
     @include mat.elevation(4);
   }
 }
+
 .menu-docs-logo {
   width: 24px;
   height: 24px;
