--- a/src/app/components/project-pages/portfolio/portfolio.component.scss
+++ b/src/app/components/project-pages/portfolio/portfolio.component.scss
@@ -3,17 +3,15 @@
 .grid-container {
   width: 100%;
 }
-.grid-tile {
-  width: 100%;
-  height: 1020%;
-}
+
+  
+
 .dashboard-card {
   padding: 0;
   width: 90%;
   height: auto;
   max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  margin:15px auto;
 }
 
 mat-raised-button:hover {
@@ -24,9 +22,7 @@ mat-raised-button:hover {
   font-size: 18px;
   font-weight: bold;
   line-height: 18px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+  margin:15px;
 }
 .card-subtitle {
   font-size: 14px;
@@ -40,7 +36,7 @@ mat-raised-button:hover {
   white-space: pre-line;
   font-size: 12px;
   font-weight: 300;
-  margin-left: 15px;
+  margin:30px auto;
   padding: 10px;
 }
 
@@ -49,15 +45,12 @@ mat-raised-button:hover {
   font-weight: bold;
   
 }
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-}
+
 
 .dashboard-card-content {
   width: 100%;
   height: 100%;
+  
 }
 
 .button-group {
@@ -68,18 +61,18 @@ mat-raised-button:hover {
   column-gap: 2%;
   justify-content: center;
   align-items: center;
-  
+  margin:30px auto;
 }
 
-mat-card .img_project {
+ .img_project {
   width: 75%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
-  
-}
+ 
+ }
 .menu-item {
   margin: 15px 0;
   @include mat.elevation(2);
