--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -352,8 +352,14 @@
     <app-contact-page></app-contact-page>
     </div>
     <hr mat-divider>
+<div id="video-background">
 
+  <app-video-background></app-video-background>
+
+</div>
+  <hr mat-divider>
   <div id="footer" class="homepage-tile">
     <h2>Explore more</h2>
     <app-file-tree></app-file-tree>
   </div>
+ 
