--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -1,8 +1,61 @@
+header {
+  position: relative;
+  background-color: black;
+  height: 75vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+}
 
+header video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+header .container {
+  position: relative;
+  z-index: 2;
+}
+
+header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.0;
+  z-index: 1;
+}
+
+/* Media Query for devices withi coarse pointers and no hover functionality */
+
+/* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element */
+
+@media (pointer: coarse) and (hover: none) {
+  header {
+    background: url('../../../assets/img/homepage/video_background.jpg') black no-repeat center center scroll;
+  }
+
+  header video {
+    display: none;
+  }
+}
 .docs-header-background {
   overflow: hidden;
   position: relative;
   height: 600px;
+  z-index: 2;
 }
 
 .docs-header-background::before {
@@ -17,6 +70,7 @@
   background-repeat: no-repeat;
   background-position: 80% 30px;
   opacity: 0.2;
+  z-index: 2;
 }
 .docs-header-background::after {
   content: "";
@@ -25,7 +79,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: 1;
+ 
 
   animation: slide 1s  1 3s;
 	
@@ -146,7 +200,7 @@ mat-icon {
   align-items: center;
   justify-content: space-evenly;
   right:5px;
-
+z-index: 3;
   bottom: 15%;
   margin: 0 auto;
 }
