video on all devices

--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -40,17 +40,20 @@ header .overlay {
 
 /* Media Query for devices withi coarse pointers and no hover functionality */
 
-/* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element */
+/* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element 
 
 @media (pointer: coarse) and (hover: none) {
   header {
     background: url('../../../assets/img/homepage/video_background.jpg') black no-repeat center center scroll;
   }
 
+
   header video {
     display: none;
   }
 }
+*/
+
 .docs-header-background {
   overflow: hidden;
   position: relative;
