--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -4,7 +4,7 @@
     
  
     <video loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true">
-      <source src="../../../assets/img/homepage/video_background.mp4" type="video/mp4">
+      <source src="assets/img/homepage/video_background.mp4" type="video/mp4">
     </video>
         
     <div class="docs-header-section">
