--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -194,6 +194,78 @@ mat-icon {
   vertical-align: middle;
 }
 
+.rotator-wrapper {
+  position: relative;
+}
+
+.rotator-wrapper span {
+  display: inline-block;
+  min-width: 155px;
+  text-align: left;
+}
+
+.rotator-wrapper span span {
+  position: absolute;
+ 
+  top: -0px;
+  opacity: 0;
+  animation: rotateWord 18s linear infinite 0s;
+  
+}
+
+.rotator-wrapper span span:nth-child(2) {
+  animation-delay: 3s;
+}
+
+.rotator-wrapper span span:nth-child(3) {
+  animation-delay: 6s;
+}
+
+.rotator-wrapper span span:nth-child(4) {
+  animation-delay: 9s;
+}
+
+.rotator-wrapper span span:nth-child(5) {
+  animation-delay: 12s;
+}
+
+@keyframes rotateWord {
+  0% {
+    opacity: 0;
+  }
+
+  2% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  5% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+
+  15% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+
+  20% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+
 .docs-header-button-group {
   position: absolute;
   display: flex;
