--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -9,8 +9,19 @@
         
     <div class="docs-header-section">
       <div class="docs-header-headline">
-        <h1 class="mat-h1">Jan Warzecha</h1>
-        <h2 class="mat-h2">Full Stack Developer</h2>
+        <h1 class="mat-h1" >Jan Warzecha</h1>
+
+        <h2 class="mat-h2 rotator-wrapper">
+        <span class="rotator">
+          <span>Full Stack Developer</span>
+          <span>Angular Developer</span>
+          <span>Engineering Specialist</span>
+          <span>Software Engineer</span>
+          <span>Frondend Web Developer</span>
+        </span>
+</h2>
+
+
       </div>
       <div class="docs-header-start"></div>
     </div>
