projects site ux

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -17,7 +17,8 @@
           <span>Angular Developer</span>
           <span>Engineering Specialist</span>
           <span>Software Engineer</span>
-          <span>Frondend Web Developer</span>
+          <span>Web Developer</span>
+          <span>Exploration Geologist</span>
         </span>
 </h2>
 
